--- a/css/style-3.css
+++ b/css/style-3.css
@@ -453,7 +453,7 @@ ol {
 
 .hero__photo {
   width: 100%;
-  height: 60vh;
+  /* height: 60vh; */
   object-fit: cover;
   object-position: top center;
 }
@@ -624,7 +624,7 @@ ol {
   height: auto;
   display: block;
   vertical-align: middle;
-  aspect-ratio: 4 / 5;
+  /* aspect-ratio: 4 / 5; */
   object-fit: cover;
 }
 
